@@ -1,6 +1,10 @@
+2010-03-09 Ingo Renner  <ingo@typo3.org>
+
+	* Added an option to use a Solr server for meta data extraction instead of Tika
+
 2010-03-08 Ingo Renner  <ingo@typo3.org>
 
-	* Added an option to use a Solr server for (text) extraction instead of Tika
+	* Added an option to use a Solr server for text extraction instead of Tika
 
 2010-02-25 Ingo Renner  <ingo@typo3.org>
 
